--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,9 @@
 		<link rel="stylesheet" href="css/main.css" />
 		<link rel="stylesheet" href="css/sheet.css" />
 
+		<!-- Quill (a rich text editor) theme -->
+		<link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css" />
+
 		<title>Deep Sheet</title>
 	</head>
 	<body>
