--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,7 @@
 
 		<link rel="stylesheet" href="css/main.css" />
 		<link rel="stylesheet" href="css/sheet.css" />
+		<link rel="stylesheet" href="css/grid.css" />
 
 		<!-- Quill (a rich text editor) theme -->
 		<link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css" />
@@ -33,7 +34,7 @@
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 
-		<div>
+		<div class="footer">
 			Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from
 			<a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by
 			<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank"
