--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="utf-8" />
-      <!--
+	<head>
+		<meta charset="utf-8" />
+		<!--
 			Notice the use of %PUBLIC_URL% in the tags above.
 			It will be replaced with the URL of the `public` folder during the build.
 			Only files inside the `public` folder can be referenced from the HTML.
@@ -11,51 +11,38 @@
 			work correctly both with client-side routing and a non-root public URL.
 			Learn how to configure a non-root public URL by running `npm run build`.
 		-->
-      <link rel="shortcut icon" href="%PUBLIC_URL%/img/spreadsheet.ico" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <meta name="theme-color" content="#000000" />
+		<link rel="shortcut icon" href="%PUBLIC_URL%/img/spreadsheet.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#000000" />
 
-      <!--
+		<!--
 			manifest.json provides metadata used when your web app is installed on a
 			user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
 		-->
-      <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-      <link rel="stylesheet" href="css/main.css" />
-      <link rel="stylesheet" href="css/sheet.css" />
-      <link rel="stylesheet" href="css/grid.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="css/sheet.css" />
+		<link rel="stylesheet" href="css/grid.css" />
 
-      <!-- Quill (a rich text editor) theme -->
-      <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css" />
+		<!-- Quill (a rich text editor) theme -->
+		<link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css" />
 
-      <!-- semantic ui -->
-      <link
-         rel="stylesheet"
-         href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
-      />
+		<!-- semantic ui -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
 
-      <title>Deep Sheet</title>
-   </head>
-   <body>
-      <noscript>You need to enable JavaScript to run this app.</noscript>
-      <div id="root"></div>
+		<title>Deep Deep Sheet</title>
+	</head>
+	<body>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div>
 
-      <div class="footer">
-         Icons made by
-         <a href="https://www.flaticon.com/authors/freepik" title="Freepik"
-            >Freepik</a
-         >
-         from
-         <a href="https://www.flaticon.com/" title="Flaticon"
-            >www.flaticon.com</a
-         >
-         is licensed by
-         <a
-            href="http://creativecommons.org/licenses/by/3.0/"
-            title="Creative Commons BY 3.0"
-            target="_blank"
-            >CC 3.0 BY</a
-         >
-      </div>
-   </body>
+		<div class="footer">
+			Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from
+			<a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by
+			<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank"
+				>CC 3.0 BY</a
+			>
+		</div>
+	</body>
 </html>
