--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,17 +21,17 @@
 		-->
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-      <!-- semantic ui -->
-      <link
+      <!-- semantic ui TODO phase this out -->
+      <!-- <link
          rel="stylesheet"
          href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
-      />
+      /> -->
 
       <!-- Quill (a rich text editor) theme -->
       <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css" />
 
       <!-- our css -->
-      <link rel="stylesheet" href="css/main.css" />
+      <!-- <link rel="stylesheet" href="css/main.css" /> -->
       <link rel="stylesheet" href="css/sheet.css" />
       <link rel="stylesheet" href="css/grid.css" />
 
@@ -40,23 +40,5 @@
    <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
       <div id="root"></div>
-
-      <div class="footer">
-         Icons made by
-         <a href="https://www.flaticon.com/authors/freepik" title="Freepik"
-            >Freepik</a
-         >
-         from
-         <a href="https://www.flaticon.com/" title="Flaticon"
-            >www.flaticon.com</a
-         >
-         is licensed by
-         <a
-            href="http://creativecommons.org/licenses/by/3.0/"
-            title="Creative Commons BY 3.0"
-            target="_blank"
-            >CC 3.0 BY</a
-         >
-      </div>
    </body>
 </html>
