multiple updates, google auth not working

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,9 @@
 		-->
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+		<!-- used for google authorization -->
+		<script src="https://accounts.google.com/gsi/client" async></script>
+
       <title>Deep Deep Sheet</title>
    </head>
    <body>
